# Flemmarr

./: .gitignore  Flemmarr.code-workspace  Makefile  README.md  pyproject.toml
config/: example_config.yml
src/dev/scripts/: config.py  constants.py  create_docker_compose.py  generate_example_config.py  generate_models.py  setup_sonarr_dev.py
src/dev/scripts/utils/: constants.py  enum.py  model.py
src/dev/utils/: constants.py
src/flemmarr/: __main__.py  api.py  logger.py  main.py  sonarr_handler.py
src/flemmarr/clients/: README.md  pyproject.toml
src/flemmarr/clients/sonarr_client/models/: __init__.py  add_series_options.py  alternate_title_resource.py  auto_tagging_resource.py  auto_tagging_specification_schema.py  backup_resource.py  blocklist_bulk_resource.py  blocklist_resource.py  blocklist_resource_paging_resource.py  command.py  command_resource.py  custom_filter_resource.py  custom_format_bulk_resource.py  custom_format_resource.py  custom_format_specification_schema.py  delay_profile_resource.py  disk_space_resource.py  download_client_bulk_resource.py  download_client_config_resource.py  download_client_resource.py  episode_file_list_resource.py  episode_file_resource.py  episode_resource.py  episode_resource_paging_resource.py  episodes_monitored_resource.py  field.py  health_resource.py  history_resource.py  history_resource_data_type_0.py  history_resource_paging_resource.py  (+74 more)
src/flemmarr/sonarr/: sonarr_config_map.py  sonarr_handler.py
src/flemmarr/utils/: constants.py  enum.py  performance.py
src/flemmarr/utils/models/: config.py  general.py
(+174 files in other folders)
